--- a/index.html
+++ b/index.html
@@ -25,5 +25,22 @@
             </section>
         </div>
     </header>
+    <!-- 2nd part -->
+    <main class="flex flex-col-reverse py-28 px-24 w-full md:flex-row items-center sm:flex-col gap-16 ">
+        <div class="">
+            <div>
+                <span class="text-bold text-5xl">ALWAYS</span>
+                <span class="text-amber-600 text-4xl">FRESH</span>
+            </div>
+            <div>
+                <span class="text-fuchsia-600 text-6xl">FLOWERS</span>
+            </div>
+            <p class="text-gray-500 text-2xl">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+        </div>
+        <!-- img part -->
+        <div class="w-full md:w-1/2 flex justify-center">
+            <img src="/image/hero-flower.png" alt="">
+        </div>
+    </main>
 </body>
 </html>
