section plant re-solf

--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
         </div>
     </main>
     <!--  3rd part(section-plant)-->
+    <section class="p-15 sm:text-center py-10">
         <div class="w-full mx-auto ">
             <span class="text-4xl text-amber-700">Our</span>
             <span class="text-4xl text-bold">Plants</span>
             <p class="text-2xl text-gray-500">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
         </div>
-        <div class="grid items-center justify-items-center grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12">
+        <div class="grid items-center justify-items-center grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-12 py-9">
             <div class=" grid gap-7">
                 <img src="/image/sample-flower-image.png" alt="">
                 <h2 class="text-3xl">Lily Blossom</h2>
@@ -98,5 +99,6 @@
                 <button class="bg-red-500 text-white px-4 py-2 w-70"> ADD TO CART </button>
             </div>
         </div>
+    </section>
 </body>
 </html>
