Plants Lover Section 4th part done

--- a/index.html
+++ b/index.html
@@ -100,5 +100,26 @@
             </div>
         </div>
     </section>
+
+    <!-- Plants Lover Section 4th part -->
+    <div class="flex flex-col sm:flex-row bg-white p-50 w-full">
+        <div class="absolute top-auto px-96 lg:top-430 size-3/4">
+            <img src="/icon/trusted-badge.png" alt="">
+        </div>
+        <div class="w-full md:w-1/2 flex justify-center">
+            <img src="/image/flower-store.png" alt="">
+        </div>
+        <div class=" sm:ml-6 mt-4 sm:mt-0 flex flex-col justify-center">
+            <span class="text-5xl text-black">Flower & Plants </span>
+            <span class="text-5xl text-black">Lover</span>
+            <span class="text-gray-500">
+                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                <li>Indulge your senses with the beauty and fragrance of  our fresh flower shop. From classic roses to exotic  blooms, we offer a wide variety of fresh.</li>
+
+            </span>
+        
+        </div>
+    </div>
 </body>
 </html>
