--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 <body>
     <header class=" h-24 w-full flex items-center justify-center shadow-none">
-        <div class="w-5/6 flex justify-between items-center ">
+        <div class="w-5/6 justify-between items-center md:display flex">
             <div class="h-20">
                 <img src="/icon/logo.png" alt="">
             </div>
+           <!-- Hamburger Button for Mobile -->
+           <button class="md:hidden block text-3xl" id="menu-toggle"></button>
             <!-- navigation menu -->
             <section class="flex justify-end gap-15 text-2xl ">
                <nav class=" hidden md:flex gap-16">
